# ai-blu-demo

./: .gitignore  README.md  debug.yaml  ingest.py  pyproject.toml  vector_probe.py
basics/: embedding_test.ipynb  openapi.ipynb  setup_mongodb_vector_search.py
docs/: elyra_config.md
ingestion/: chunking.py  diagnostics.py  embeddings.py  ingest.py  ingestion-new.pipeline  ingestion.pipeline  ingestion.py  ingestion_new.pipeline  s3_download.py
k8s/: Containerfile  ingestion-pvc.yaml
llamastack/: README.md  config.yaml  llama-stack-dist.yaml  postgres.yaml
llamastack/pgvector/: Containerfile  README.md  buildconfig.yaml
