[project]
name = "blu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.50",
    "docling>=2.73.1",
    "kfp>=2.16.0",
    "numpy>=2.4.2",
    "openai>=2.32.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "sentence-transformers>=5.2.2",
]
